# green-team

./: README.md
2026-03-02-voting-architecture/: README-bkp.md  README.md  SECURITY.md  arch.drawio  cache-layer.drawio  use-cases.drawio
2026-03-02-voting-architecture/rust_vs_go/: README.md
2026-03-02-voting-architecture/rust_vs_go/projects/: docker-compose.yml  k6-summary.json
2026-03-02-voting-architecture/rust_vs_go/projects/go_performance_test/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  k6-report.html  k6-summary.json  main.go
2026-03-02-voting-architecture/rust_vs_go/projects/go_websocket_echo/: README.md  go.mod  main.go
2026-03-02-voting-architecture/rust_vs_go/projects/k6/: poll_ramp_10k.js
2026-03-02-voting-architecture/rust_vs_go/projects/reports/: k6-report-go.html  k6-report-rust.html  k6-summary-go.json  k6-summary-rust.json
2026-03-02-voting-architecture/rust_vs_go/projects/rust_axum/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
2026-03-02-voting-architecture/rust_vs_go/projects/rust_axum/k6/: k6-report.html  k6-summary.json  poll_ramp_10k.js
2026-03-02-voting-architecture/rust_vs_go/projects/rust_axum/src/: index.html  lib.rs  main.rs
2026-03-02-voting-architecture/rust_vs_go/projects/rust_websocket_echo/: Cargo.toml  README.md
2026-03-02-voting-architecture/rust_vs_go/projects/rust_websocket_echo/src/: main.rs
2026-03-23-data-kata/: docker-compose.yaml
2026-03-23-data-kata/web-server/: Dockerfile  server.js
2026-03-23-data-pipeline/: README.md
(+7 files in other folders)
